fix error overlap username

--- a/theme/login/resources/css/login.css
+++ b/theme/login/resources/css/login.css
@@ -117,7 +117,7 @@ body {
 }
 .message-text {
   width: 322px;
-  height: 60px;
+  height: 22px;
   opacity: 0.87;
   font-family: Muli;
   font-size: 14px;
@@ -130,7 +130,7 @@ body {
   color: #b8082a;
   border: 0px;
   position: relative;
-  top: 210px;
+  top: 180px;
   left: 64px;
   display: inline-flex;
   align-items: center;
